# sus

./: .gitignore  CMakeLists.txt  README.md
lib/analyst/include/: analyst.h
lib/analyst/src/: analyst.c
lib/attendant/include/: attendant.h
lib/attendant/src/: attendant.c
lib/client/include/: client.h
lib/client/src/: client.c
lib/reception/include/: client_factory.h  reception.h
lib/reception/src/: client_factory.c  reception.c
lib/scheduler/include/: batch_scheduler.h  edf.h  scheduler.h
lib/scheduler/src/: edf.c
lib/service/include/: service.h
lib/service/src/: service.c
lib/utils/include/: time.h
lib/utils/src/: time.c
src/: main.c
src/cleaner/: main.c
src/client/: main.c
src/sus/: cli.c  main.c
test/: client_test.cpp
test/analyst/: analyst_test.cpp
test/reception/: client_factory_test.cpp
